# Eivelia_BOT

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
Hradware/: main.ino
eivelia_bot/config/: __init__.py
eivelia_bot/plugins/mqtt/: __init__.py  mqtt.py
eivelia_bot/plugins/nonebot_plugin_fire/: __init__.py
eivelia_bot/plugins/test/: __init__.py
