[tool.poetry]
name = "eivelia_bot"
version = "0.2.0"
description = "eivelia_bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.1.5"
gmqtt = "^0.6.11"
nonebot-plugin-gocqhttp = "^0.6.3"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[tool.nonebot]
plugins = ["nonebot_plugin_gocqhttp"]
plugin_dirs = ["eivelia_bot/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
